--- a/mobile/src/main/res/values/color.xml
+++ b/mobile/src/main/res/values/color.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
     <resources>
-        <color name="ColorPrimary">#FF5722</color>
-        <color name="ColorPrimaryDark">#E64A19</color>
+        <color name="ColorPrimary">#009688</color>
+        <color name="ColorPrimaryDark">#00796B</color>
+        <color name="ColorPrimaryLight">#B2DFDB</color>
+        <color name="ColorTextIcons">#FFFFFF</color>
+        <color name="ColorAccent">#607D8B</color>
+        <color name="PrimaryText">#212121</color>
+        <color name="SecondaryText">#727272</color>
+        <color name="DividerColor">#B6B6B6</color>
     </resources>
 
