--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -2,8 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:orientation="vertical"
-    tools:context=".MainActivity" tools:deviceIds="wear_square">
+    tools:context=".MainActivity" tools:deviceIds="wear_square"
+    android:weightSum="1"
+    android:background="#ffffff"
+    >
 
-    <TextView android:id="@+id/text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:text="@string/hello_square" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="71dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="100"
+        android:id="@+id/tempo"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.62"
+        android:textSize="80dp"
+        android:textIsSelectable="false"
+        android:textColor="#222222"
+        android:autoText="false"
+        android:numeric="integer" />
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.62">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:id="@+id/sumar"
+            android:layout_weight="0.50"
+            android:textSize="60dp"
+            android:background="#00796B" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="-"
+            android:id="@+id/restar"
+            android:layout_weight="0.50"
+            android:textSize="60dp"
+            android:background="#00796B" />
+
+    </LinearLayout>
 </LinearLayout>
